--- a/Moshify/index.html
+++ b/Moshify/index.html
@@ -16,74 +16,292 @@
 </head>
 
 <body>
-    <footer class="block block--dark footer">
-        <div class="container grid footer__grid-section">
-            <section class="collapsible collapsible--expanded footer__section">
-                <header class="collapsible__header">
-                    <h2 class="collapsible__heading footer__heading">Products</h2>
-                    <svg class="icon icon--white collapsible__chevron">
-                        <use xlink:href="icons/sprite.svg#chevron"></use>
-                    </svg>
-                </header>
-                <div class="collapsible__content">
-                    <ul class="list">
-                        <li><a href="#">Website Hosting</a></li>
-                        <li><a href="#">Free Automated Wordpress</a></li>
-                        <li><a href="#">Migrations</a></li>
-                    </ul>
-                </div>
-            </section>
-            <section class="collapsible footer__section">
-                <header class="collapsible__header">
-                    <h2 class="collapsible__heading footer__heading">Company</h2>
-                    <svg class="icon icon--white collapsible__chevron">
-                        <use xlink:href="icons/sprite.svg#chevron"></use>
-                    </svg>
-                </header>
-                <div class="collapsible__content">
-                    <ul class="list">
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Affiliates</a></li>
-                        <li><a href="#">Blog</a></li>
-                    </ul>
-                </div>
-            </section>
-            <section class="collapsible footer__section">
-                <header class="collapsible__header">
-                    <h2 class="collapsible__heading footer__heading">Suppport</h2>
-                    <svg class="icon icon--white collapsible__chevron">
-                        <use xlink:href="icons/sprite.svg#chevron"></use>
-                    </svg>
-                </header>
-                <div class="collapsible__content">
-                    <ul class="list">
-                        <li><a href="#">Contact</a></li>
-                        <li><a href="#">Knowledge Base</a></li>
-                        <li><a href="#">FAQ</a></li>
-                    </ul>
-                </div>
-            </section>
-            <section class="collapsible footer__section">
-                <header class="collapsible__header">
-                    <h2 class="collapsible__heading footer__heading">Domains</h2>
-                    <svg class="icon icon--white collapsible__chevron">
-                        <use xlink:href="icons/sprite.svg#chevron"></use>
-                    </svg>
-                </header>
-                <div class="collapsible__content">
-                    <ul class="list">
-                        <li><a href="#">Domain Checker</a></li>
-                        <li><a href="#">Domain Transfer</a></li>
-                        <li><a href="#">Free Domain</a></li>
-                    </ul>
-                </div>
-            </section>
-            <section class="footer__brand">
-                <img class="footer__image" src="icons/logo.svg" alt="">
-                <p class="footer__copyright">Copyright 2022 Mosh Hamedani</p>
-            </section>
+    <header>
+        <nav class="nav collapsible">
+            <a class="nav__brand" href="index.html"><img src="icons/logo.svg" alt=""></a>
+            <svg class="icon icon--white nav__toggler">
+                <use xlink:href="icons/sprite.svg#menu"></use>
+            </svg>
+            <ul class="list nav__list collapsible__content">
+                <li class="nav__item"><a href="#">Hosting</a></li>
+                <li class="nav__item"><a href="#">VPS</a></li>
+                <li class="nav__item"><a href="#">Domain</a></li>
+                <li class="nav__item"><a href="#">Pricing</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="block block--dark block--skewed-left hero">
+        <div class="container grid grid--1x2">
+            <header class="block__header hero__content">
+                <h1 class="block__heading">Cloud Hosting for Pros</h1>
+                <p class="hero__tagline">Deploy your websites in less than 60 seconds</p>
+                <a href="#" class="btn btn--accent btn--stretched">GET STARTED</a>
+            </header>
+            <picture>
+                <source type="icon/webp" srcset="icons/banner.webp 1x, icons/banner@2x.webp 2x">
+                <source type="image/png" srcset="icons/banner.png 1x, icons/banner@2x.png 2x">
+                <img class="hero__image" src="icons/banner.png" alt="">
+            </picture>
         </div>
-    </footer>
+    </div>
+    <section class="block container block__domain">
+        <header class="block__header">
+            <h2>Starting at $9 per month</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic quis incidunt facere voluptate esse illo
+                enim debitis nihil minus qui?</p>
+        </header>
+        <div class="input-group">
+            <input type="text" class="input" placeholder="Enter domain name here...">
+            <button class="btn btn--accent">
+                <svg class="icon icon--white">
+                    <use xlink:href="icons/sprite.svg#search"></use>
+                </svg>
+                Search
+            </button>
+        </div>
+        <ul class="list block-domain__prices">
+            <li><span class="badge badge--secondary">.com $9</span></li>
+            <li>.sg $10</li>
+            <li>.space $11</li>
+            <li>.info@14</li>
+            <li>.net $10</li>
+            <li>.xyz $10</li>
+        </ul>
+    </section>
+    <section class="block container block-plans">
+        <div class="grid grid--1x3">
+            <div class="plan">
+                <div class="card card--secondary">
+                    <header class="card__header">
+                        <h3 class="plan__name">Entry</h3>
+                        <span class="plan__price">$14</span>
+                        <span class="plan__billing-cycle">/month</span>
+                        <span class="badge badge--secondary badge--small">10% OFF</span>
+                        <span class="plan__description">Easy start on the cloud</span>
+                    </header>
+                    <div class="card__body">
+                        <ul class="list list--tick">
+                            <li class="list__item">Unlimited Websites</li>
+                            <li class="list__item">Unlimited Bandwidth</li>
+                            <li class="list__item">100 GB SSD Storage</li>
+                            <li class="list__item">3 GB RAM</li>
+                        </ul>
+                        <button class="btn btn--outline btn-block">BUY NOW</button>
+                    </div>
+                </div>
+            </div>
+            <div class="plan plan--popular">
+                <div class="card card--primary">
+                    <header class="card__header">
+                        <h3 class="plan__name">Entry</h3>
+                        <span class="plan__price">$14</span>
+                        <span class="plan__billing-cycle">/month</span>
+                        <span class="badge badge--primary badge--small">10% OFF</span>
+                        <span class="plan__description">Easy start on the cloud</span>
+                    </header>
+                    <div class="card__body">
+                        <ul class="list list--tick">
+                            <li class="list__item">Unlimited Websites</li>
+                            <li class="list__item">Unlimited Bandwidth</li>
+                            <li class="list__item">100 GB SSD Storage</li>
+                            <li class="list__item">3 GB RAM</li>
+                        </ul>
+                        <button class="btn btn--outline btn-block">BUY NOW</button>
+                    </div>
+                </div>
+            </div>
+            <div class="plan">
+                <div class="card card--secondary">
+                    <header class="card__header">
+                        <h3 class="plan__name">Entry</h3>
+                        <span class="plan__price">$14</span>
+                        <span class="plan__billing-cycle">/month</span>
+                        <span class="badge badge--secondary badge--small">10% OFF</span>
+                        <span class="plan__description">Easy start on the cloud</span>
+                    </header>
+                    <div class="card__body">
+                        <ul class="list list--tick">
+                            <li class="list__item">Unlimited Websites</li>
+                            <li class="list__item">Unlimited Bandwidth</li>
+                            <li class="list__item">100 GB SSD Storage</li>
+                            <li class="list__item">3 GB RAM</li>
+                        </ul>
+                        <button class="btn btn--outline btn-block">BUY NOW</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="block container">
+        <header class="block__header">
+            <h2>Host on the Cloud to Keep Growing</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, temporibus.</p>
+        </header>
+        <article class="grid grid--1x2 feature">
+            <div class="feature__content">
+                <span class="icon-container">
+                    <svg class="icon icon--primary">
+                        <use xlink:href="icons/sprite.svg#easy"></use>
+                    </svg>
+                </span>
+                <h3 class="feature__heading">Super Easy to Use</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores velit deserunt consectetur sint
+                    voluptatum facere voluptatibus in commodi consequatur et facilis repudiandae, quis rem alias
+                    aspernatur
+                    eveniet molestiae quam tempora.</p>
+                <a href="#" class="link-arrow">Learn More</a>
+            </div>
+            <picture>
+                <source type="image/webp" srcset="icons/easy.webp, icons/easy@2x.webp 2x">
+                <source type="image/jpg" srcset="icons/easy.jpg 1x, icons/easy@2x.jpg 2x">
+                <img class="feature__image" src="icons/easy@2x.jpg"
+                    alt="Application screenshot showing easy to use interface">
+            </picture>
+        </article>
+        <article class="grid grid--1x2 feature">
+            <div class="feature__content">
+                <span class="icon-container">
+                    <svg class="icon icon--primary">
+                        <use xlink:href="icons/sprite.svg#computer"></use>
+                    </svg>
+                </span>
+                <h3 class="feature__heading">Simply Fast Websites</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores velit deserunt consectetur sint
+                    voluptatum facere voluptatibus in commodi consequatur et facilis repudiandae, quis rem alias
+                    aspernatur
+                    eveniet molestiae quam tempora.</p>
+                <a href="#" class="link-arrow">Learn More</a>
+            </div>
+            <picture>
+                <source type="image/webp" srcset="icons/fast.webp, icons/fast@2x.webp 2x">
+                <source type="image/jpg" srcset="icons/fast.jpg 1x, icons/fast@2x.jpg 2x">
+                <img class="feature__image" src="icons/fast@2x.jpg" alt="Application screenshot showing fast response">
+            </picture>
+        </article>
+        <article class="grid grid--1x2 feature">
+            <div class="feature__content">
+                <span class="icon-container">
+                    <svg class="icon icon--primary">
+                        <use xlink:href="icons/sprite.svg#wordpress"></use>
+                    </svg>
+                </span>
+                <h3 class="feature__heading">WordPress made easy</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores velit deserunt consectetur sint
+                    voluptatum facere voluptatibus in commodi consequatur et facilis repudiandae, quis rem alias
+                    aspernatur
+                    eveniet molestiae quam tempora.</p>
+                <a href="#" class="link-arrow">Learn More</a>
+            </div>
+            <picture>
+                <source type="image/webp" srcset="icons/wordpress.webp, icons/wordpress@2x.webp 2x">
+                <source type="image/jpg" srcset="icons/wordpress.jpg 1x, icons/wordpress@2x.jpg 2x">
+                <img class="feature__image" src="icons/wordpress@2x.jpg"
+                    alt="Application screenshot showing wordpress website">
+            </picture>
+        </article>
+    </section>
+    <section class="block block--dark block--skewed-right block-showcase">
+        <header class="block__header">
+            <h2>User-friendly Control Panel</h2>
+        </header>
+        <div class="container grid grid--1x2">
+            <picture class="block-showcase__picture">
+                <source type="image/webp" srcset="icons/ipad.webp 1x, icons/ipad@2x.webp 2x">
+                <source type="image/png" srcset="icons/ipad.png 1x, icons/ipad@2x.png 2x">
+                <img class="block-showcase__image" src="icons/ipad@2x.png" alt="IPad Image">
+            </picture>
+            <ul class="list">
+                <li>
+                    <div class="media">
+                        <div class="media__image">
+                            <svg class="icon icon--primary">
+                                <use xlink:href="icons/sprite.svg#snap"></use>
+                            </svg>
+                        </div>
+                        <div class="media__body">
+                            <h3 class="media__title">Easy Start & Managed Updates</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aperiam id cumque
+                                delectus quae,
+                                perspiciatis quod corporis nam tenetur saepe.
+                            </p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="media">
+                        <div class="media__image">
+                            <svg class="icon icon--primary">
+                                <use xlink:href="icons/sprite.svg#snap"></use>
+                            </svg>
+                        </div>
+                        <div class="media__body">
+                            <h3 class="media__title">Staging, Git & WP-CLI</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aperiam id cumque
+                                delectus quae,
+                                perspiciatis quod corporis nam tenetur saepe.
+                            </p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="media">
+                        <div class="media__image">
+                            <svg class="icon icon--primary">
+                                <use xlink:href="icons/sprite.svg#snap"></use>
+                            </svg>
+                        </div>
+                        <div class="media__body">
+                            <h3 class="media__title">Dynamic Caching & More</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aperiam id cumque
+                                delectus quae,
+                                perspiciatis quod corporis nam tenetur saepe.
+                            </p>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <section class="block">
+        <header class="block__header">
+            <h2>What our Customers are saying</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum, error.</p>
+        </header>
+        <div class="container">
+            <div class="card testimonial">
+                <div class="grid grid--1x2">
+                    <div class="testimonial__img">
+                        <img src="icons/testimonial.jpg" alt="A happy, smiling component">
+                        <span class="icon-container icon-container--accent">
+                            <svg class="icon--small icon--white">
+                                <use xlink:href="icons/sprite.svg#quotes"></use>
+                            </svg>
+                        </span>
+                    </div>
+                    <blockquote class="quote">
+                        <p class="quote__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae optio
+                            odio
+                            natus eos
+                            dicta tempora delectus cumque enim qui nisi.
+                        </p>
+                        <footer>
+                            <div class="media">
+                                <div class="media__image">
+                                    <svg class="icon icon--primary quote__line">
+                                        <use xlink:href="icons/sprite.svg#line"></use>
+                                    </svg>
+                                </div>
+                                <div class="media__body">
+                                    <h3 class="media__title quote__author">John Smith</h3>
+                                    <p class="quote__org">ABC Company</p>
+                                </div>
+                            </div>
+                        </footer>
+                    </blockquote>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="js/main.js"></script>
 </body>
 
